<resources>
    <string name="app_name">MQTTClient</string>
    <string name="btn_pub">发送</string>
    <string name="txt_user">用户名</string>
    <string name="txt_password">密    码</string>
    <string name="txt_login">登    录</string>
    <string name="txt_cancel">取    消</string>
    <string name="txt_Transformation">显示密码</string>
    <string name="txt_contacts">联系人</string>
    <string name="txt_contactsDel">是否删除该联系人？</string>
    <string name="txt_contactsDel_yes">是</string>
    <string name="txt_contactsDel_no">否</string>
    <string name="txt_friend">User</string>
    <string name="alphabet_and_number">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
</resources>
