<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="60dp"
    android:background="#25AE90"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/txt_user"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_user"
            android:maxLength="8"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="#ffffff" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/txt_password"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_password"
            android:inputType="textPassword"
            android:maxLength="16"
            android:layout_marginLeft="17dp"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="#ffffff" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp"
        android:gravity="right|center_vertical"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkbox_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_Transformation"
            android:textColor="#ffffff"
            android:textSize="14sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="#ECEEF1"
            android:text="@string/txt_login"
            android:textColor="#25AE90" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ECEEF1"
            android:text="@string/txt_cancel"
            android:textColor="#25AE90" />
    </LinearLayout>

</LinearLayout>